2007-10-26: Jason Long <jlong@messiah.edu>
 * t/corpus/badkey_9.txt: to test empty g= in selector
 * t/corpus/ignore_8.txt: to test bad i= value in signature
 * lib/Mail/DKIM/Verifier.pm: check signature identity value

2007-10-24: Jason Long <jlong@messiah.edu>
 * t/corpus/badkey_8.txt, ignore_5.txt, ignore_6.txt: fix signature so
   it would verify if not for the flaw in the public key
 * scripts/dkimsign.pl: allow key protocol to be specified on command
   line
 * lib/Mail/DKIM/Verifier.pm: update documentation on possible error
   codes
 * lib/Mail/DKIM/PublicKey.pm: cleanup error code

2007-10-24: Jason Long <jlong@messiah.edu>
 * t/corpus/badkey_*.txt: changed subjects to indicate which test it is
 * t/corpus/badkey_7.txt, badkey_8.txt, goodkey_1.txt, goodkey_2.txt,
   goodkey_3.txt: additional tests of public key features
 * t/corpus/verifier.t: test the new test messages
 * lib/Mail/DKIM/Verifier.pm (check_public_key): check key granularity
   and report the problem if it doesn't match
 * lib/Mail/DKIM/PublicKey.pm (check_granularity): a method for testing
   the granularity
   (granularity): return the default value of '*' if g= not defined
 * scripts/dkimsign.pl: ability to set i= tag from command-line

2007-10-24: Jason Long <jlong@messiah.edu>
 * lib/Mail/DKIM/Verifier.pm (check_signature): do signature version check
   here
   (finish_header): report invalid signature details to the signature
   object
   (signatures): return all parsed signatures, not just "valid" signatures
 * lib/Mail/DKIM/Signature.pm: some misc. cleanup
   (check_version): version check is now a separate method, rather than
   being part of parse()
 * lib/Mail/DKIM/DkSignature.pm (check_version): always true
 * t/corpus/multiple_2.txt: a message testing multiple signatures with
   different results
 * t/verifier.t: verify that each signature's results are available and
   correct

2007-10-24: Jason Long <jlong@messiah.edu>