@@ -2,7 +2,7 @@
 
 use strict;
 use warnings;
-use Test::More tests => 58;
+use Test::More tests => 59;
 
 use Mail::DKIM::Verifier;
 
@@ -44,6 +44,7 @@ test_email("good_ietf00_4.txt", "pass");
 test_email("good_ietf00_5.txt", "pass");
 test_email("good_ietf01_1.txt", "pass");
 test_email("good_ietf01_2.txt", "pass");
+test_email("good_rfc4871_3.txt", "pass");  # tests extra tags in signature
 test_email("multiple_1.txt", "pass");
 test_email("multiple_2.txt", "pass");
 my @sigs = $dkim->signatures;
