@@ -1,3 +1,8 @@
+2007-10-30: Jason Long <jlong@messiah.edu>
+ * t/corpus/good_rfc4871_3.txt: to test extra tags in signature
+ * scripts/dkimsign.pl: allow user to specify arbitrary extra tags for
+   putting in the signature
+
 2007-10-26: Jason Long <jlong@messiah.edu>
  * t/corpus/badkey_9.txt: to test empty g= in selector
  * t/corpus/ignore_8.txt: to test bad i= value in signature
